Modules/opencl/ui/main.qml
@@ -10,8 +10,7 @@ import QtQuick 2.5
 import org.kde.kcmutils as KCM
 
 import org.kde.kinfocenter.private 1.0 as KInfoCenter
-import org.kde.kinfocenter.opencl.private 1.0
 
 KInfoCenter.CommandOutputKCM {
-    output: InfoOutputContext
+    output: kcm.infoOutputContext
 }
